--- a/SunPolice/package.json
+++ b/SunPolice/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.18.0",
     "koa": "^2.7.0",
     "koa2-cors": "^2.0.6",
+    "lib-flexible": "^0.3.2",
+    "px2rem-loader": "^0.1.9",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
