--- a/SunPolice/package.json
+++ b/SunPolice/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "json-server": "^0.14.2",
     "koa": "^2.7.0",
     "koa2-cors": "^2.0.6",
     "lib-flexible": "^0.3.2",
@@ -49,6 +50,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "mockjs": "^1.0.1-beta3",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
